--- a/app/src/main/res/layout/fragment_admin_cap.xml
+++ b/app/src/main/res/layout/fragment_admin_cap.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminHomeFragment.AcceptedApplicationFragment">
+    tools:context=".AdminHomeFragment.AdminCapFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Kabul Edilen" />
+        android:text="Cap" />
 
 </FrameLayout>
