--- a/app/src/main/res/layout/fragment_admin_yaz_okulu.xml
+++ b/app/src/main/res/layout/fragment_admin_yaz_okulu.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminHomeFragment.IncomingApplicationFragment">
+    tools:context=".AdminHomeFragment.AdminYazOkuluFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Gelen Basvurular" />
+        android:text="yaz Okulu" />
 
 </FrameLayout>
