--- a/app/src/main/res/layout/activity_dgs.xml
+++ b/app/src/main/res/layout/activity_dgs.xml
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="5dp"
+            android:visibility="gone"
             app:boxCornerRadiusBottomEnd="20dp"
             app:boxCornerRadiusTopStart="20dp"
             app:boxStrokeColor="@color/kou_green"
@@ -59,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="5dp"
+            android:visibility="gone"
             app:boxCornerRadiusBottomEnd="20dp"
             app:boxCornerRadiusTopStart="20dp"
             app:boxStrokeColor="@color/kou_green"
@@ -85,6 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="5dp"
+            android:visibility="gone"
             app:boxCornerRadiusBottomEnd="20dp"
             app:boxCornerRadiusTopStart="20dp"
             app:boxStrokeColor="@color/kou_green"
@@ -154,10 +157,10 @@
                 <TextView
                     android:id="@+id/textView_Dgs_fileStateLessonFile"
                     android:layout_width="0dp"
-                    android:enabled="false"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
                     android:background="@drawable/text_view_border"
+                    android:enabled="false"
                     android:onClick="selectFileLessonFile"
                     android:padding="15dp"
                     android:text="Ders Listesi Ekle"
