admin yatay gecis gelen başvurular tamamlandı.

--- a/app/src/main/res/menu/admin_home_menu.xml
+++ b/app/src/main/res/menu/admin_home_menu.xml
@@ -18,7 +18,7 @@
                     android:title="Yaz Okulu Başvurusu" />
                 <item
                     android:id="@+id/admin_nav_menu_YatayGeciş"
-                    android:title="Yatay Okulu Başvurusu" />
+                    android:title="Yatay Geçiş Başvurusu" />
                 <item
                     android:id="@+id/admin_nav_menu_DGS"
                     android:title="DGS Başvurusu" />
