--- a/app/src/main/res/layout/fragment_admin_yatay_gecis.xml
+++ b/app/src/main/res/layout/fragment_admin_yatay_gecis.xml
@@ -22,7 +22,7 @@
             android:layout_marginBottom="2.5dp"
             app:cardCornerRadius="20dp"
             app:cardElevation="8dp"
-            app:contentPadding="15dp">
+            app:contentPadding="8dp">
 
             <LinearLayout
                 android:id="@+id/admin_YatayGecisLinearLayoutIncoming"
@@ -34,7 +34,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="3dp"
+                    android:layout_margin="10dp"
                     android:text="Gelen Başvurular"
                     android:textSize="20dp"
                     android:textStyle="bold" />
@@ -60,7 +60,7 @@
             android:layout_marginBottom="2.5dp"
             app:cardCornerRadius="20dp"
             app:cardElevation="8dp"
-            app:contentPadding="15dp">
+            app:contentPadding="8dp">
 
             <LinearLayout
                 android:id="@+id/admin_YatayGecisLinearLayoutAccept"
@@ -72,7 +72,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="3dp"
+                    android:layout_margin="10dp"
                     android:text="Onaylanan Başvurular"
                     android:textSize="20dp"
                     android:textStyle="bold" />
@@ -98,7 +98,7 @@
             android:layout_marginBottom="2.5dp"
             app:cardCornerRadius="20dp"
             app:cardElevation="8dp"
-            app:contentPadding="15dp">
+            app:contentPadding="8dp">
 
             <LinearLayout
                 android:id="@+id/admin_YatayGecisLinearLayoutRejected"
@@ -110,7 +110,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="3dp"
+                    android:layout_margin="10dp"
                     android:text="Reddedilen  Başvurular"
                     android:textSize="20dp"
                     android:textStyle="bold" />
