--- a/app/src/main/res/layout/activity_admin_app_item.xml
+++ b/app/src/main/res/layout/activity_admin_app_item.xml
@@ -28,7 +28,7 @@
                 android:gravity="center_horizontal"
                 android:text="21/02/2012"
                 android:textColor="@color/black"
-                android:textSize="14dp" />
+                android:textSize="13dp" />
 
 
             <TextView
@@ -36,16 +36,17 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
+                android:layout_marginStart="3dp"
                 android:gravity="center_horizontal"
                 android:text="181307036"
                 android:textColor="@color/black"
-                android:textSize="14dp" />
+                android:textSize="13dp" />
 
             <ImageButton
                 android:id="@+id/adminApplicationItem_acceptButton"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginStart="3dp"
                 android:background="@drawable/border_my_app_item"
                 android:backgroundTint="@color/kou_green"
                 android:padding="10dp"
@@ -56,8 +57,8 @@
             <ImageButton
                 android:id="@+id/adminApplicationItem_rejectButton"
                 android:layout_width="40dp"
+                android:layout_marginStart="3dp"
                 android:layout_height="40dp"
-                android:layout_marginRight="5dp"
                 android:background="@drawable/border_my_app_item"
                 android:backgroundTint="#CB2027"
                 android:padding="10dp"
@@ -69,6 +70,7 @@
                 android:id="@+id/adminApplicationItem_fileDownloadButton"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:layout_marginStart="3dp"
                 android:background="@drawable/border_my_app_item"
                 android:backgroundTint="@color/HomeFragmentBgColor"
                 android:padding="10dp"
