--- a/app/src/main/res/layout/fragment_my_application.xml
+++ b/app/src/main/res/layout/fragment_my_application.xml
@@ -20,9 +20,9 @@
             android:layout_marginTop="35dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="2.5dp"
-            app:cardCornerRadius="10dp"
+            app:cardCornerRadius="20dp"
             app:cardElevation="8dp"
-            app:contentPadding="15dp">
+            app:contentPadding="8dp">
 
             <LinearLayout
                 android:id="@+id/myApp_linearLayoutOnGoing"
@@ -34,7 +34,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="3dp"
+                    android:layout_margin="10dp"
                     android:text="Devam Eden Başvurular"
                     android:textSize="20dp"
                     android:textStyle="bold" />
@@ -61,7 +61,7 @@
             android:layout_marginBottom="2.5dp"
             app:cardCornerRadius="20dp"
             app:cardElevation="8dp"
-            app:contentPadding="15dp">
+            app:contentPadding="8dp">
 
             <LinearLayout
                 android:id="@+id/myApp_linearLayoutEnd"
@@ -73,7 +73,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="3dp"
+                    android:layout_margin="10dp"
                     android:text="Biten Başvurular"
                     android:textSize="20dp"
                     android:textStyle="bold" />
