--- a/app/src/main/res/layout/activity_dgs.xml
+++ b/app/src/main/res/layout/activity_dgs.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Catogery.DgsActivity">
 
+
     <LinearLayout
         android:id="@+id/IntibakMainLayout"
         android:layout_width="match_parent"
@@ -23,6 +24,7 @@
             android:textColor="@color/black"
             android:textSize="30dp"
             android:textStyle="bold"></TextView>
+
 
         <!-- fakülte -->
         <com.google.android.material.textfield.TextInputLayout
@@ -106,6 +108,16 @@
                 android:minHeight="48dp"
                 tools:ignore="SpeakableTextPresentCheck" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="Ek Belgeler"
+            android:textColor="@color/black"
+            android:textSize="20dp"></TextView>
+
 
         <TableLayout
             android:layout_width="match_parent"
