--- a/app/src/main/res/layout/activity_yatay_gecis.xml
+++ b/app/src/main/res/layout/activity_yatay_gecis.xml
@@ -101,6 +101,7 @@
                 android:backgroundTint="@color/black"
                 android:ems="10"
                 android:hint="Yarıyıl"
+                android:maxLength="1"
                 android:inputType="number"
                 android:minHeight="48dp"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -149,8 +150,9 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/black"
                 android:ems="10"
+                android:maxLength="4"
                 android:hint="Genel Not Ortalaması(GNO)"
-                android:inputType="number"
+                android:inputType="numberDecimal|numberSigned"
                 android:minHeight="48dp"
                 tools:ignore="SpeakableTextPresentCheck" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -176,6 +178,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/black"
                 android:ems="10"
+                android:maxLength="9"
                 android:hint="KOÜ Öğrenci Numarası"
                 android:inputType="number"
                 android:minHeight="48dp"
@@ -203,6 +206,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/black"
                 android:ems="10"
+                android:maxLength="4"
                 android:hint="Kayıtlı Olduğu Kuruma Yerleşme Yılı"
                 android:inputType="number"
                 android:minHeight="48dp"
@@ -210,66 +214,57 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <TableLayout
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/editTextYatayGecisScoreWrap"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp">
+            android:layout_gravity="center"
+            android:layout_weight="4"
+            android:padding="5dp"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
+            app:boxStrokeColor="@color/kou_green"
+            app:endIconMode="clear_text"
+            app:helperText="*Zorunlu Alan"
+            app:helperTextTextColor="@color/red_helper">
 
-            <TableRow android:gravity="center">
-                <!-- hala kayıtlı olduğu kuruma kayıt puanı  -->
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/editTextYatayGecisScoreWrap"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="4"
-                    android:padding="5dp"
-                    app:boxCornerRadiusBottomEnd="20dp"
-                    app:boxCornerRadiusTopStart="20dp"
-                    app:boxStrokeColor="@color/kou_green"
-                    app:endIconMode="clear_text"
-                    app:helperText="*Zorunlu Alan"
-                    app:helperTextTextColor="@color/red_helper">
-
-                    <EditText
-                        android:id="@+id/editTextYatayGecisScore"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/black"
-                        android:ems="10"
-                        android:hint="Kayıtlı Olduğu Kuruma Yerleşme Puanı"
-                        android:inputType="number"
-                        android:minHeight="48dp"
-                        tools:ignore="SpeakableTextPresentCheck" />
-                </com.google.android.material.textfield.TextInputLayout>
+            <EditText
+                android:id="@+id/editTextYatayGecisScore"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/black"
+                android:ems="10"
+                android:maxLength="7"
+                android:hint="Kayıtlı Olduğu Kuruma Yerleşme Puanı"
+                android:inputType="numberDecimal|numberSigned"
+                android:minHeight="48dp"
+                tools:ignore="SpeakableTextPresentCheck" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="2.75"
-                    android:hint="Puan Türü"
-                    android:padding="5dp"
-                    app:boxCornerRadiusBottomEnd="20dp"
-                    app:boxCornerRadiusTopStart="20dp"
-                    app:boxStrokeColor="@color/kou_green"
-                    app:helperText="*Zorunlu Alan"
-                    app:helperTextTextColor="@color/red_helper">
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2.75"
+            android:hint="Puan Türü"
+            android:padding="5dp"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
+            app:boxStrokeColor="@color/kou_green"
+            app:helperText="*Zorunlu Alan"
+            app:helperTextTextColor="@color/red_helper">
 
-                    <AutoCompleteTextView
-                        android:id="@+id/autoCompleteYatayGecispScoreType1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:enabled="false"
-                        android:inputType="none"
-                        android:textColor="@color/black" />
-                </com.google.android.material.textfield.TextInputLayout>
-            </TableRow>
-        </TableLayout>
-
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteYatayGecispScoreType1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:inputType="none"
+                android:textColor="@color/black" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <!-- yabancı dil puanı -->
         <com.google.android.material.textfield.TextInputLayout
@@ -292,7 +287,8 @@
                 android:backgroundTint="@color/black"
                 android:ems="10"
                 android:hint="Yabancı Dil Puanı"
-                android:inputType="number"
+                android:maxLength="7"
+                android:inputType="numberDecimal|numberSigned"
                 android:minHeight="48dp"
                 tools:ignore="SpeakableTextPresentCheck" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -386,64 +382,68 @@
 
 
         <!-- başvurulacak bölüme ait puan -->
-        <TableLayout
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/editTextYatayGecisScore2Wrap"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp">
+            android:layout_gravity="center"
+            android:layout_weight="6"
+            android:padding="5dp"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
+            app:boxStrokeColor="@color/kou_green"
+            app:endIconMode="clear_text"
+            app:helperText="*Zorunlu Alan"
+            app:helperTextTextColor="@color/red_helper">
 
-            <TableRow android:gravity="center">
+            <EditText
+                android:id="@+id/editTextYatayGecisScore2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/black"
+                android:ems="10"
+                android:maxLength="7"
+                android:hint="Başurulacak Bölüme Ait Puan"
+                android:inputType="numberDecimal|numberSigned"
+                tools:ignore="SpeakableTextPresentCheck" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/editTextYatayGecisScore2Wrap"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="6"
-                    android:padding="5dp"
-                    app:boxCornerRadiusBottomEnd="20dp"
-                    app:boxCornerRadiusTopStart="20dp"
-                    app:boxStrokeColor="@color/kou_green"
-                    app:endIconMode="clear_text"
-                    app:helperText="*Zorunlu Alan"
-                    app:helperTextTextColor="@color/red_helper">
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:hint="Puan Türü"
+            android:maxWidth="20dp"
+            android:padding="5dp"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
+            app:boxStrokeColor="@color/kou_green"
+            app:helperText="*Zorunlu Alan"
+            app:helperTextTextColor="@color/red_helper">
 
-                    <EditText
-                        android:id="@+id/editTextYatayGecisScore2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/black"
-                        android:ems="10"
-                        android:hint="Başurulacak Bölüme Ait Puan"
-                        android:inputType="number"
-                        tools:ignore="SpeakableTextPresentCheck" />
-                </com.google.android.material.textfield.TextInputLayout>
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteYatayGecispScoreType2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:inputType="none"
+                android:textColor="@color/black" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:hint="Puan Türü"
-                    android:maxWidth="20dp"
-                    android:padding="5dp"
-                    app:boxCornerRadiusBottomEnd="20dp"
-                    app:boxCornerRadiusTopStart="20dp"
-                    app:boxStrokeColor="@color/kou_green"
-                    app:helperText="*Zorunlu Alan"
-                    app:helperTextTextColor="@color/red_helper">
 
-                    <AutoCompleteTextView
-                        android:id="@+id/autoCompleteYatayGecispScoreType2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:enabled="false"
-                        android:inputType="none"
-                        android:textColor="@color/black" />
-                </com.google.android.material.textfield.TextInputLayout>
-            </TableRow>
-        </TableLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:gravity="center"
+            android:text="Ek Belgeler"
+            android:textColor="@color/black"
+            android:textSize="20dp"></TextView>
+
 
         <!--Transkript-->
         <TableLayout
