--- a/app/src/main/res/layout/activity_yaz_okulu.xml
+++ b/app/src/main/res/layout/activity_yaz_okulu.xml
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:gravity="center"
-            android:text="Yaz Okulu Başlama-Bitiş Tarihleri "
+            android:text="Yaz Okuluna Başlama - Bitiş Tarihleri "
             android:textColor="@color/black"
             android:textSize="20dp"></TextView>
 
